插件系统文档

--- a/docs/notes/guide/2. 基本开发/5. 状态量.md
+++ b/docs/notes/guide/2. 基本开发/5. 状态量.md
@@ -34,8 +34,8 @@ NcatBot 的全局退出标志，一般用于后台模式开发。
 
 ### `status.global_api`
 
-可以用于调用 NcatBot 提供的 QQ 操作接口，用于发送消息、审核加群请求、获取群成员列表等 [参见]()。
+可以用于调用 NcatBot 提供的 QQ 操作接口，用于发送消息、审核加群请求、获取群成员列表等 [参见](../3.%20组件介绍/6.%20BotAPI.md)。
 
 ### `status.global_access_manager`
 
-用于访问 NcatBot 的内置权限管理器，实现权限控制，[参见]()。
+用于访问 NcatBot 的内置权限管理器，实现权限控制，[参见](../7.%20插件系统/3.%20插件的交互系统/3.3%20权限系统.md)。
