--- a/docs/notes/guide/7. 插件系统/2. 插件类的成员.md
+++ b/docs/notes/guide/7. 插件系统/2. 插件类的成员.md
@@ -88,5 +88,7 @@ class NcatBotPlugin(...):
 
 ## 更多
 
+- [订阅和发布事件](3.%20插件的交互系统/3.1%20事件的发布和订阅.md)
+- [注册功能（已过时但未废弃，有上位替代）](3.%20插件的交互系统/3.2%20注册功能.md)
 - [配置项](3.%20插件的交互系统/3.4%20内置功能.md#插件配置项)
-- [定时任务](4.%20插件高级功能/4.5%20定时任务.md)
+- [定时任务](4.%20插件高级功能/4.3%20定时任务.md)
