--- a/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.1 事件的发布和订阅.md
+++ b/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.1 事件的发布和订阅.md
@@ -80,22 +80,41 @@ class MyPlugin(NcatBotPlugin):
 
 本示例中, `handle_test` 和 `handle_exact` 都是事件回调函数，且他们都是 `MyPlugin` 类的成员函数。因此可以使用
 
+### 其它有关方法
+
+```python
+class NcatBotPlugin(...):
+    def unregister_handler(self, handler_id: UUID) -> bool:
+        """注销事件处理器。
+        Args:
+            handler_id: 要注销的事件处理器UUID
+        Returns:
+            是否成功注销
+        """
+        ...
+
+    def unregister_all_handler(self) -> None:
+        """注销本插件所有事件处理器。"""
+        ...
+        
+    ...
+```
+
 
 ## 发布事件
 
-在 `NcatBotPlugin` 上下文中任意位置均可发布事件.
+:::tip
+一般用于跨插件的通讯
+:::
 
-事件分为同步和异步, 同步事件会优先处理并迅速返回结果, 异步事件将会挂到异步事件循环中处理, ==如果可能请一定使用异步事件, 同步事件未经测试不稳定==
+在 `NcatBotPlugin` 上下文中任意位置均可发布事件。
 
-事件的处理结果(如果有), 应该使用 `Event.add_result(result)` 在回调函数中添加.
-
-==请务必严格按照 `[插件名].[事件名]` 的格式填写事件类型.==
+插件发布的事件会被所有订阅该事件的插件接收和处理。就像官方事件一样。
 
 ```python
-class MyPlugin(BasePlugin):
-    def some_func(self):
+class MyPlugin(NcatBotPlugin):
+    async def some_func(self):
         event = Event("MyPlugin.event", {"message": "hello"})
         await self.event_bus.publish_async(event)  # 异步发布不等待结果
-        results = self.event_bus.publish_sync(event)  # 同步等待结果
 ```
 
