--- a/docs/notes/guide/7. 插件系统/4. 插件高级功能/4.1. 添加依赖.md
+++ b/docs/notes/guide/7. 插件系统/4. 插件高级功能/4.1. 添加依赖.md
@@ -5,9 +5,23 @@ permalink: /guide/plugindep/
 createTime: 2025/03/06 11:19:14
 ---
 
-这里的插件依赖指依赖其它**插件**, 如果依赖 Python 第三方库, 参考[为插件引入 Python 第三方库](6.%20复杂插件开发.md#为插件引入-python-第三方库)
+## 依赖 Python 第三方库
 
-## 声明依赖的插件
+部分复杂插件可能需要 **Python 第三方库**。
+
+文件结构：
+:::file-tree
+- main.py
+- plugins/
+    - MyPlugin/
+       - \_\_init\_\_.py
+       - requirements.txt  <-- 新增此文件
+       - plugin.py
+:::
+
+加载插件时会自动安装 `requirements.txt` 中列出的第三方库。
+
+## 依赖其它插件（尚未完工）
 
 使用 `BasePlugin.dependencies` 声明插件依赖, 格式见下.
 
@@ -20,7 +34,3 @@ class MyPlugin(BasePlugin):
         "LLM_API": ">=0.0.1"
     }
 ```
-
-## 引入依赖的插件
-
-参考[安装插件](../1.%20快速开始/3.%20安装和使用插件.md)
