--- a/docs/notes/guide/7. 插件系统/5. 发布你的插件.md
+++ b/docs/notes/guide/7. 插件系统/5. 发布你的插件.md
@@ -4,7 +4,7 @@ createTime: 2025/03/06 11:21:00
 permalink: /guide/qr8yp7sn/
 ---
 
-# 暂时废弃
+# 尚未完工
 
 [插件仓库地址](https://github.com/ncatbot/NcatBot-Plugins)
 
