--- a/docs/notes/guide/7. 插件系统/1. 介绍.md
+++ b/docs/notes/guide/7. 插件系统/1. 介绍.md
@@ -90,9 +90,6 @@ classDiagram
 
     class BasePlugin {
         +event_bus                       事件总线（属性）
-        +debug                           调试开关（属性）
-        +meta_data                       元数据（属性）
-        +thread_pool                     线程池（属性）
         +register_handler()              注册事件处理器
         +unregister_handler()            取消注册处理器
         +unregister_all_handler()        取消全部处理器
@@ -100,9 +97,9 @@ classDiagram
         +request()                       异步调用接口
         +get_plugin()                    获取插件实例
         +list_plugins()                  列出插件
-        +on_load()                       插件加载时回调
-        +on_reload()                     插件重载时回调
-        +on_close()                      插件关闭时回调
+        +_init_()                       插件加载时同步回调
+        +_reinit_()                     插件重载时同步回调
+        +_close_()                      插件关闭时同步回调
     }
 
     class NcatBotPlugin {
@@ -130,7 +127,24 @@ classDiagram
     }
 
     class EventBus
-    class RBACManager
+    class RBACManager {
+      +user_exists 检查用户是否存在
+      +role_exists 检查角色是否存在
+      +permission_path_exists 检查权限路径是否存在
+      +check_permission 检查用户是否有权限
+      +user_has_role 检查用户是否有角色
+      +add_role 添加角色
+      +add_user 添加用户
+      +assign_role_to_user 分配角色给用户（用户不存在时自动创建）
+      +assign_permissions_to_role 分配白名单权限给角色（权限路径不存在时自动创建）
+      +assign_permissions_to_user 分配白名单权限给用户（权限路径不存在时自动创建）
+      +ban_permissions_to_role 分配黑名单权限给角色（权限路径不存在时自动创建）
+      +ban_permissions_to_user 分配黑名单权限给角色（权限路径不存在时自动创建）
+      +revoke_permissions_from_role 从角色撤销所有权限分配信息
+      +revoke_permissions_from_user 从用户撤销所有权限分配信息
+      +add_role_inheritance 添加角色继承
+      +add_permissions 添加权限路径（如果存在则不操作）
+    }
     class BotAPI
 
     %% 依赖关系（聚合/组合）
