请求示例项目

--- a/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
+++ b/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
@@ -112,6 +112,8 @@ async def on_group(e: GroupMessageEvent):
 
 ## RequestEvent（请求）
 
+[实战案例](../9.%20实际项目参考/教程项目/4.%20处理好友请求和加群请求.md)
+
 用于处理「加好友」或「加群」请求。
 
 关键字段：
@@ -121,6 +123,8 @@ async def on_group(e: GroupMessageEvent):
 - `comment`：验证信息。
 
 便捷方法：
+- `is_group_request()`：判断是否为加群请求
+- `is_friend_request()`：判断是否为加好友请求
 - `await approve(approve=True, remark=None, reason=None)`：
   - `request_type` 为 `friend`：可传 `remark` 作为通过后的好友备注；
   - `request_type` 为 `group`：可传 `reason` 作为拒绝理由；
