--- a/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.1 事件的发布和订阅.md
+++ b/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.1 事件的发布和订阅.md
@@ -12,7 +12,7 @@ permalink: /guide/pasevent/
 
 `NcatBotEvent` 类主要包含两个成员变量
 
-- `data: Any` 事件携带的数据
+- `data: Any` 事件携带的数据。
 - `type: str` 事件类型
 
 ### 事件类型
@@ -21,7 +21,7 @@ permalink: /guide/pasevent/
 
 事件类型命名规范为 `[插件名].[事件名]`.
 
-基本事件 (群聊消息, 私聊消息, 请求消息, 通知消息, 启动事件, 心跳事件, 关闭事件) 的事件名封装如下:
+**官方事件** (群聊消息, 私聊消息, 请求消息, 通知消息, 启动事件, 心跳事件, 关闭事件) 的事件名封装如下:
 
 - `ncatbot.utils.assets.literals.OFFICIAL_GROUP_MESSAGE_EVENT = "ncatbot.group_message_event"`
 - `ncatbot.utils.assets.literals.OFFICIAL_PRIVATE_MESSAGE_EVENT = "ncatbot.private_message_event"`
@@ -30,6 +30,8 @@ permalink: /guide/pasevent/
 - `ncatbot.utils.assets.literals.OFFICIAL_STARTUP_EVENT = "ncatbot.startup_event"`
 - `ncatbot.utils.assets.literals.OFFICIAL_HEARTBEAT_EVENT = "ncatbot.heartbeat_event"`
 - `ncatbot.utils.assets.literals.OFFICIAL_SHUTDOWN_EVENT = "ncatbot.shutdown_event"`
+
+官方事件携带的数据**一定是[ BaseEventData ](../../4.%20数据结构介绍/2.%20BaseEventData.md)的子类**。
 
 插件也可以自行发布事件, 具体请继续阅读.
 
