--- a/docs/notes/guide/8. 高级教程/3. 其他/1. 远端模式.md
+++ b/docs/notes/guide/8. 高级教程/3. 其他/1. 远端模式.md
@@ -1,59 +1,54 @@
 ---
-title: 使用远端 NapCat 接口
+title: 远端模式
 createTime: 2025/02/09 16:45:00
 permalink: /guide/inxart0k/
 ---
 
-如果在 NcatBot 之前没有接触过其它涉及网络的编程或者配置, 那么**不应该**使用远端 NapCat 接口. ==选择使用远端 NapCat 接口表明你愿意为此付出时间学习或者已经具备相当的基本知识.==
+# [血的教训](https://wesley-young.github.io/2025-09-05-attack-on-onebot-service)
 
-[了解 NapCat 和 NcatBot 的关系](./1.%20认识%20NcatBot.md#NcatBot-和-NapCat-的关系).
+:::warning
+WebUI token 和 WebSocket token **必须使用强 token（包含大小写字母、数字、符号，至少 12 位）**，否则可能会被暴力破解，导致 NapCat 服务器被入侵。
+:::
 
-由于 QQ 风控, 不建议频繁开关 NapCat. 因此有时候需要将 **NapCat** 部署在云服务器上. 一般来说建议一并将 **NcatBot** 也部署在同一台服务器上, 但有时候确实需要分开部署, 此时可以使用远端 NapCat 接口.
+## 什么是远端模式
+
+远端模式下，NcatBot 不会在本地启动 NapCat，而是连接到远端的 NapCat 服务器。
 
 ## 什么时候适合使用远端 NapCat 接口
 
-- 自定义的 NcatBot 功能对性能要求很高, 云服务器无法负担, 但希望 NapCat 能够不间断运行, 不需要每次使用 NcatBot 时都启动 NapCat.
-
-- 具备**基本的网络和操作系统知识**的前提下, 你认为需要使用远端 NapCat 接口的情况.
-
+- ==具备基本的网络和操作系统知识的前提下==。
+- 使用 Docker 部署 NapCat 和 NcatBot, 但不希望 NapCat 和 NcatBot 在同一个容器中运行。
+- NapCat 和 NcatBot 需要分开部署在不同的服务器上。
+- 本地无法正常登录 NapCat。
 
 ## 准备工作
 
-远端 NapCat 接口一般由云服务器提供, 云服务器的操作系统一般是 Linux, 你需要完成以下操作:
+:::warning
+务必使用强 token（包含大小写字母、数字、符号，至少 12 位），否则可能会被暴力破解，导致 NapCat 服务器被入侵。
+:::
 
-1. 获取服务器公网 IP.
-2. 开放**系统防火墙**的 3000, 3001, 6099 端口.
-3. 开放**服务商防火墙**的 3000, 3001, 6099 端口.
+- 参考 [NapCat 安装教程](https://napneko.github.io/guide/boot/Shell) 安装 NapCat。
+- 启动 NapCat 服务，扫码登录，拿到 NapCat WebUI token 和 WebUI 地址（通常是 `http://<服务器 IP>:6099/webui/`）。
+- 使用 NapCat WebUI token 登录 NapCat WebUI，
+- WebUI 界面中，点击左边栏的 "网络配置"。
+- 点击 "新建"，选择 `Websocket服务器`。
+- 填写以下信息：
+  - 名称：随便起一个名字，比如 `NcatBot`。
+  - Host：如果是公网服务器，填写 `0.0.0.0`。
+  - Port：默认 `3001`，也可以改成其它端口，但要记住。
+  - Token：==必须使用强 token==（包含大小写字母、数字、符号，至少 12 位）。
+  - 勾选 "启用"。
+- 检查服务器防火墙、系统防火墙正确放通。
 
-请参考 [Linux 安装](../1.%20快速开始/1.1%20Linux%20安装.md#检查网络环境) 完成 2, 3 步, 服务器公网 IP 请向服务商获取.
-
-## 自动配置远端 NapCat 服务器(推荐)
-
-在远端正常运行 NcatBot 的示例程序, 下面将其称为**远端引导程序**。
-
-运行远端引导程序时, 除了改动 `bt_uin` 和 `root` 外, 还需将 ==`ws_uri` 填写为 `ws://<服务器公网 IP>:<端口号>`，将 `ws_listen_ip` 填写为 `0.0.0.0`（监听所有来源的请求）。
-
-```python
-from ncatbot.core import BotClient
-bot = BotClient()
-# 假设服务器公网 IP 为 123.123.123.123, 你希望在 3001 端口上开启 NapCat 服务。
-bot.run_blocking(bt_uin="123456", root="root", ws_uri="ws://123.123.123.123:3001", ws_token="your_token", ws_listen_ip="0.0.0.0")
-```
-
-Ncatbot 会进行自动登录的引导, 远端引导程序成功启动并进行测试后, 可以关闭 NcatBot 但**不要关闭 NapCat**.
-
-接着在本地使用同样的参数运行 Ncatbot 即可。
-
-建议使用 `token` 参数确保 NcatBot 和 NapCat 的连接安全。
-
-## 手动配置远端 NapCat 服务器
+## 填写有关配置项
 
 根据 [NapCat 文档](https://napneko.github.io/), 在远端正确配置 NapCat 及其 WebSocket 服务器。
 
-尤其注意需要 "启用" WebSocket 服务器，以及监听端口的填写应该为 `0.0.0.0`。
+参考[配置项](../../2.%20基本开发/4.%20配置项.md)填写 `ws_uri` 和 `ws_token`。并将 `remote_mode` 设置为 `True`。
 
-本地运行 NcatBot, `ws_uri` 填写为 `ws://服务器公网 IP:{你配置时填写的端口}`. `token` 填写为 WebSocket 的 token(注意不是 webui 的 token, WebSocket token 默认为空字符串).
+如果需要，也可以填写 `webui_url` 和 `webui_token`。
 
-## 提醒
+## 已知局限
 
-- 获取文件时，如果 NapCat 服务器在远端，那么会返回远端服务器的路径。你需要自行对位于远端的文件进行管理。
+- 使用远端 NapCat 模式时，无法发送大于 30MB（约数）的文件。
+- 获取文件时，由于 NapCat 和 NcatBot 不在同一机器，文件路径可能失效，但 uri 仍然有效。
