--- a/docs/notes/guide/8. 高级教程/3. 其他/4. AI+NcatBot.md
+++ b/docs/notes/guide/8. 高级教程/3. 其他/4. AI+NcatBot.md
@@ -4,6 +4,8 @@ createTime: 2025/03/25 23:21:39
 permalink: /guide/useaidv/
 ---
 
+# 暂时未完成
+
 AI 时代已至, 只需要很低的学习成本, 就能够使用 AI 和 NcatBot 开发自己的 QQ 机器人.
 
 ## NcatBot 是一个 AI 友好的项目
