--- a/docs/notes/guide/8. 高级教程/3. 其他/2. 日志.md
+++ b/docs/notes/guide/8. 高级教程/3. 其他/2. 日志.md
@@ -4,13 +4,8 @@ createTime: 2025/03/05 20:00:05
 permalink: /guide/qbus9tlp/
 ---
 
-::: warning
-尚未完工
-:::
 
 NcatBot 提供日志功能以便检查程序运行情况. 日志**按天分割**保存在工作目录下的 `log/` 文件夹中.
-
-如果使用 [Windows 一键安装](../1.%20快速开始/1.4%20Windows%20一键安装.md), 那么日志位于 `main.exe` 所在目录的 `ncatbot/log/` 文件夹中.
 
 ## 默认日志
 
@@ -26,9 +21,19 @@ NcatBot 提供日志功能以便检查程序运行情况. 日志**按天分割**
 
 ## 自定义日志
 
-导入 `ncatbot.utils.logger` 中的 `get_log` 函数, 调用 `get_log` 函数即可获取一个日志对象 `_log`.
+```python
+from ncatbot.utils import get_log
+from ncatbot.plugin_system import NcatBotPlugin
 
-`_log` 是一个标准的 `logging.Logger` 对象, 支持 `debug, info, warning, error` 等方法.
+logger = get_log("MyPlugin")  # 创建一个名为 my_plugin 的日志记录器
+
+class MyPlugin(NcatBotPlugin):
+    async def on_load(self):
+        logger.info("插件已加载")  # 记录一条信息级别的日志
+    
+    async def some_method(self):
+        logger.info("执行了某个方法")  # 记录一条信息级别的日志
+```
 
 ## 日志路径
 
