--- a/docs/notes/guide/7. 插件系统/4. 插件高级功能/4.2 私有工作目录.md
+++ b/docs/notes/guide/7. 插件系统/4. 插件高级功能/4.2 私有工作目录.md
@@ -4,6 +4,8 @@ createTime: 2025/03/27 10:07:54
 permalink: /guide/prispace/
 ---
 
+# 暂未支持
+
 ## 私有工作目录
 
 在你的代码中, 使用 `os.chdir()` 函数是==严格禁止==的, 如果你有这个需求, 必须在**上下文管理器**控制的**私有工作目录**中进行.
@@ -25,6 +27,6 @@ class MyPlugin(BasePlugin):
 ```
 
 ::: warning
-私有工作目录下的 `plugin_name.json` 文件用于保存插件可持久化数据, 不应该被占用.
+私有工作目录下的 `<插件名>.json` 文件用于保存插件可持久化数据, 不应该被占用.
 :::
 
