--- a/docs/notes/guide/9. 实际项目参考/教程项目/3. 上传和获取文件.md
+++ b/docs/notes/guide/9. 实际项目参考/教程项目/3. 上传和获取文件.md
@@ -4,38 +4,52 @@ createTime: 2025/04/22 14:54:49
 permalink: /guide/to4czozs/
 ---
 
-## 上传文件
-
-发送文件。
+## 上传文件 && 发送文件
 
 ::: tip
 由于 NapCat 的一些原因, 发送**视频**建议以上传文件的形式进行.
 :::
 
-[详细文档](../../4.%20API%20参考/2.%20主要%20API%20及其使用.md#上传文件)
-
-### 通过文件消息发送
+### 通过专用接口发送
 
 ```python
 from ncatbot.core import BotClient
+
 bot = BotClient()
-api = bot.run_blocking(bt_uin="123456") # 这里写你 bot 的 QQ 号
-api.post_private_file(user_id="123456", file = "path/to/file") # 这里写接收者的 QQ 号和文件的路径
-api.post_private_file(user_id="123456", video = "path/to/video") # 这里写接收者的 QQ 号和视频的路径
+
+api = bot.run_backend(bt_uin="456789", root="987654") # 这里写你 bot 的 QQ 号
+
+api.post_private_file_sync(user_id="987654", file = "path/to/file")
+api.post_group_file_sync(group_id="695847", video = "path/to/video")
 ```
 
-- 路径一般写**绝对路径**，也可以写 url。写相对路径可能会出错。
-- 发送群文件的文件消息，应该使用 `api.post_group_file` 和 `group_id`，其它格式一致。
+- 当 NcatBot 和 NapCat 不在同一台机器上时，**必须写文件在 NcatBot 上的路径**。这种情况有一些[已知缺陷](../../8.%20高级教程/3.%20其他/1.%20远端模式.md#已知局限)。
+- 支持相对或绝对路径、 base64 字符串、URL 等多种格式。
 
+:::tip
+URL 没有任何缺陷，推荐使用。
+:::
 
-### 通过专用上传接口发送
+### 通过文件消息发送
 
-专用接口为 `bot.upload_group_file`，群文件专用。
+参考 [MessageArray](../../4.%20数据结构介绍/3.%20MessageArray.md) 和 [MessageSegment](../../4.%20数据结构介绍/4.%20MessageSegment.md)。
 
-参考详细文档。
+```python
+from ncatbot.plugin_system import NcatBotPlugin, command_registry, filter_registry
+from ncatbot.core import PrivateMessageEvent
+from ncatbot.core import File, MessageArray
 
-## 获取文件
+class MyPlugin(NcatBotPlugin):
+    name = "FileSender"
+    version = "1.0.0"
+    dependencies = {}
 
-下载文件，下载群文件，整理群文件。
+    @filter_registry.private_filter
+    @command_registry("sendfile")
+    async def send_file(self, msg: PrivateMessageEvent):
+        msg_arr = MessageArray(File("path/to/file"))
+        await msg.reply(rtf=msg_arr)
+```
 
-[详细文档](../../4.%20API%20参考/2.%20主要%20API%20及其使用.md#获取文件)
+- 这里的示例是插件格式。
+- 发送文件时，**MessageArray 中只能有一个 MessageSegment**。
