--- a/docs/notes/guide/5. API 参考/1. 概览.md
+++ b/docs/notes/guide/5. API 参考/1. 概览.md
@@ -7,8 +7,8 @@ permalink: /guide/p8aun9nh/
 
 
 NcatBot API 是你主动向 QQ 发送请求的方式，可以用于各种场景：
-- [发送各种消息]()
-- [审核加群请求]()
+- [发送各种消息](../9.%20实际项目参考/教程项目/1.%20发送复杂消息.md)
+- [审核加群请求](../9.%20实际项目参考/教程项目/4.%20处理好友请求和加群请求.md)
 - 获取群成员列表
 - 授予头衔、禁言、踢人
 - 等等
