--- a/docs/notes/guide/8. 高级教程/4. 最佳实践.md
+++ b/docs/notes/guide/8. 高级教程/4. 最佳实践.md
@@ -1,3 +1,9 @@
+---
+title: 发送各类消息
+createTime: 2025/09/26 14:00:00
+permalink: /guide/bestpractice/
+---
+
 ## 最佳实践
 
 ### 获取消息中的文本
@@ -12,5 +18,4 @@ def on_group_message(event: BaseMessageEvent):
     all_text = "".join(seg.text for seg in event.message.filter_text()) # 所有文本
     if "测试" in first_text:
         event.reply("前端：测试成功")
-
 ```
