--- a/docs/notes/guide/9. 实际项目参考/教程项目/1. 发送复杂消息.md
+++ b/docs/notes/guide/9. 实际项目参考/教程项目/1. 发送复杂消息.md
@@ -4,24 +4,15 @@ createTime: 2025/04/22 15:21:39
 permalink: /guide/sendcomm/
 ---
 
-## 发送复杂消息
-
-下面一串用于检索增强。
-
-- 发送图片。
-- 发送@，发送 @，发送at，发送 at，发送At，发送 At，发送AT，发送AT
-- 发送表情包。
-- 发送表情。
-
-[参考](../../4.%20API%20参考/2.%20主要%20API%20及其使用.md#发送简单消息)
+## 发送各类消息
 
 ```python
-from ncatbot.core import BotClient, MessageChain, Text, At, Image, Face, Reply
+from ncatbot.core import BotClient, MessageArray, Text, At, Image, Face, Reply
 
 bot = BotClient()
-api = bot.run_blocking(bt_uin="123456") # 替换为实际的 BOT QQ 号
+api = bot.run_backend(bt_uin="123456") # 替换为实际的 BOT QQ 号
 
-message = MessageChain([
+message = MessageArray([
     "喵喵喵~",
     Text("你好, 这是一条复杂的测试消息"),
     At(123456), # 替换为实际的 QQ 号
@@ -40,7 +31,3 @@ api.post_group_msg_sync(group_id=123456, rtf=message) # 替换为实际的群号
 效果展示：
 
 ![效果展示](https://ghfast.top/raw.githubusercontent.com/huan-yp/image_space/master/img/202504221424416.png)
-
-## 发送音乐卡片
-
-咕咕咕
