--- a/docs/notes/guide/2. 基本开发/1. 插件最小示例.md
+++ b/docs/notes/guide/2. 基本开发/1. 插件最小示例.md
@@ -42,19 +42,19 @@ class HelloPlugin(NcatBotPlugin):
 
 ### 插件类
 
-插件类可以利用 NcatBot 插件系统的强大功能，来定义一组功能的集合。一个插件作为一个整体能够非常灵活的迁移，[参见]()。
+插件类可以利用 NcatBot 插件系统的强大功能，来定义一组功能的集合。一个插件作为一个整体能够非常灵活的迁移，[参见](../7.%20插件系统/1.%20介绍.md)。
 
 ### command_registry
 
-用于以**命令**的形式识别和处理消息，[参见]()。
+用于以**命令**的形式识别和处理消息，[参见](../8.%20高级教程/1.%20统一命令注册器/1.%20概览.md)。
 
 ### filter_registry
 
-用于以**非命令**的形式识别和处理消息，[参见]()。
+用于以**非命令**的形式识别和处理消息，[参见](../8.%20高级教程/1.%20统一命令注册器/5.%20过滤器系统.md)。
 
 ### ncatbot.core.event
 
-事件数据结构，用于描述收到的消息、加群请求等，[参见]()。
+事件数据结构，用于描述收到的消息、加群请求等，[参见](../4.%20数据结构介绍/2.%20BaseEventData.md)。
 
 ## hello_plugin/\_\_init\_\_.py
 
@@ -77,7 +77,7 @@ bot.run_frontend()
 
 ### BotClient
 
-用于启动和终止 Bot，安装、配置、连接 NapCat；引导[插件系统]()的加载；提供回调函数注册接口，[参见]()。
+用于启动和终止 Bot，安装、配置、连接 NapCat；引导[插件系统](../7.%20插件系统/1.%20介绍.md)的加载；提供回调函数注册接口，[参见](../3.%20组件介绍/2.%20BotClient.md#BotClient：事件回调注册与运行方式)。
 
 ## 运行
 
