--- a/docs/notes/guide/2. 基本开发/2. 前后台模式最小示例.md
+++ b/docs/notes/guide/2. 基本开发/2. 前后台模式最小示例.md
@@ -52,7 +52,7 @@ bot.exit() # 需要主动退出 Bot
 
 终端执行 `python main.py` 直接运行。
 
-Bot **完成启动后**，会**返回** [BotAPI]() 实例。这个实例用于**调用各种接口**，如获取好友列表、群成员列表、收发消息、审核加群请求等。
+Bot **完成启动后**，会**返回** [BotAPI](../3.%20组件介绍/6.%20BotAPI.md) 实例。这个实例用于**调用各种接口**，如获取好友列表、群成员列表、收发消息、审核加群请求等。
 
 :::details 剩余部分的讲解
 `bot.run_backend()` **返回**后，程序将会继续执行：
@@ -68,14 +68,14 @@ Bot **完成启动后**，会**返回** [BotAPI]() 实例。这个实例用于**
 
 ### BotAPI
 
-这个实例用于**调用各种接口**，如获取好友列表、群成员列表、收发消息、审核加群请求等，[参见]()
+这个实例用于**调用各种接口**，如获取好友列表、群成员列表、收发消息、审核加群请求等，[参见](../3.%20组件介绍/6.%20BotAPI.md)
 
 ### BotClient
 
-用于启动和终止 Bot，安装、配置、连接 NapCat；引导[插件系统]()的加载；提供回调函数注册接口，[参见]()。
+用于启动和终止 Bot，安装、配置、连接 NapCat；引导[插件系统](../7.%20插件系统/1.%20介绍.md)的加载；提供回调函数注册接口，[参见](../3.%20组件介绍/2.%20BotClient.md)。
 
 ### ncatbot.core.event
 
 包括 `PrivateMessageEvent`、`GroupMessageEvent`、`BaseMessageEvent` 等。
 
-事件数据结构，用于描述收到的消息、加群请求等，[参见]()。
+事件数据结构，用于描述收到的消息、加群请求等，[参见](../4.%20数据结构介绍/2.%20BaseEventData.md)。
