--- a/docs/notes/guide/2. 基本开发/3. NcatBot 生命周期.md
+++ b/docs/notes/guide/2. 基本开发/3. NcatBot 生命周期.md
@@ -35,7 +35,7 @@ permalink: /guide/lifespan/
 
 ## Mermaid 流程图
 
-```mermaid
+:::mermaid
 sequenceDiagram
     participant U as User Code
     participant B as BotClient
@@ -75,7 +75,7 @@ sequenceDiagram
             Note right of U: 用户代码可以立即<br/>执行后续逻辑，<br/>无需等待事件
         end
     end
-```
+:::
 
 ## 1. 初始化
 
@@ -83,7 +83,7 @@ sequenceDiagram
 
 1. 导入必要的模块
 2. 创建 BotClient 实例
-3. 修改[配置项]() (可选)
+3. 修改[配置项](../2.%20基本开发/4.%20配置项.md) (可选)
 4. 注册回调函数 (可选)
 
 
@@ -137,7 +137,7 @@ sequenceDiagram
 实际代码实现中，launch_napcat_service 和 connect_websocket 发生在插件加载之后。由于这些过程的顺序不影响最终结果，因此将 launch_napcat_service 和 connect_websocket 归类到启动流程中。
 :::
 
-1. 调用 `PluginLoader.load_builtin_plugins` 加载**[内置插件]()**。
+1. 调用 `PluginLoader.load_builtin_plugins` 加载**[内置插件](../7.%20插件系统/3.%20插件的交互系统/3.5%20内置插件的拓展功能.md)**。
 2. 查找工作目录下的 `plugins` 目录, 读取插件 meta 信息.
 3. 根据插件 meta 中的依赖信息构建加载拓扑图.
 4. 加载每个插件
