--- a/docs/notes/guide/3. 组件介绍/6. BotAPI.md
+++ b/docs/notes/guide/3. 组件介绍/6. BotAPI.md
@@ -26,7 +26,7 @@ BotAPI 通过多重继承聚合五大接口域：
 - 全局只持有一个 `BotAPI` 实例，位于 `status.global_api`，但其他组件会创建对它的引用。
 
 :::tip
-BotAPI 接口很多，这里不逐一罗列。[详细列表]()。 
+BotAPI 接口很多，这里不逐一罗列。[详细列表](../5.%20API%20参考/1.%20概览.md)。 
 :::
 
 ---
