--- a/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
+++ b/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
@@ -18,7 +18,7 @@ NcatBot 将 OneBot/NapCat 的原始事件（称为官方事件）结构封装为
 
 ## 事件类继承关系
 
-```mermaid
+:::mermaid
 classDiagram
 	BaseEventData <|-- MessageEventData
 	MessageEventData <|-- BaseMessageEvent
@@ -28,7 +28,7 @@ classDiagram
 	BaseEventData <|-- RequestEvent
 	BaseEventData <|-- MetaEvent
 	BaseMessageEvent <|-- AnonymousMessage
-```
+:::
 
 ## BaseEventData（基础事件）
 
