--- a/docs/notes/guide/5. API 参考/2. Message 有关 API.md
+++ b/docs/notes/guide/5. API 参考/2. Message 有关 API.md
@@ -10,7 +10,7 @@ permalink: /api/botapi/message/
 
 事件对象已封装常用便捷方法（如 `GroupMessageEvent.reply`），本页列出底层异步 API，便于跨上下文调用。
 
-依赖类型：`MessageArray`、`Forward`、`Image`、`Record`、`PlainText` 等，[详见]()。
+依赖类型：`MessageArray`、`Forward`、`Image`、`Record`、`PlainText` 等，[详见](../4.%20数据结构介绍/3.%20MessageArray.md)。
 
 ---
 
