--- a/docs/notes/guide/5. API 参考/7. 实战手册/1. 常见场景.md
+++ b/docs/notes/guide/5. API 参考/7. 实战手册/1. 常见场景.md
@@ -1,3 +1,8 @@
+---
+title:  常见场景
+createTime: 2025/09/28 10:43:51
+permalink: /guide/gmjlpndo/
+---
 ## 处理小抄（Handlers Cookbook）
 
 这里给出基于“事件快速回复”方法的常见场景代码片段，便于即抄即用。
