--- a/docs/notes/guide/7. 插件系统/2. 插件类的成员.md
+++ b/docs/notes/guide/7. 插件系统/2. 插件类的成员.md
@@ -12,7 +12,7 @@ permalink: /guide/loadplg/
 
 一般来说, 以下工作需要**你**在插件加载时完成:
 
-- 为插件[订阅事件]().
+- 为插件[订阅事件](../7.%20插件系统/3.%20插件的交互系统/3.1%20事件的发布和订阅.md).
 - 为插件[注册插件配置项](3.%20插件的交互系统/3.4%20内置功能.md#插件配置项).
 - 为插件[注册功能](3.%20插件的交互系统/3.2%20注册功能.md).
 - 为插件[注册定时任务](3.%20插件的交互系统/3.4%20内置功能.md#定时任务).
