--- a/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.5 内置插件的拓展功能.md
+++ b/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.5 内置插件的拓展功能.md
@@ -4,6 +4,11 @@ createTime: 2025/03/27 10:00:05
 permalink: /guide/extendfuncs/
 ---
 
+## 内置插件表
+
+- `UnifiedRegistry`: 统一命令注册器，提供命令和过滤器注册功能。
+- `SystemManager`: 系统管理插件，提供插件管理、运行状态管理等功能。
+
 ## UnifiedRegistry 拓展功能
 
 ### on_request 注册器
