--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/1. 概览.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/1. 概览.md
@@ -1,3 +1,8 @@
+---
+title:  概览
+createTime: 2025/09/28 10:43:51
+permalink: /guide/xjv2088o/
+---
 # UnifiedRegistry 统一注册系统
 
 ## 🚀 概述
@@ -66,7 +71,7 @@ class MyPlugin(NcatBotPlugin):
 
 ### 高层组件关系（Component）
 
-```mermaid
+:::mermaid
 flowchart LR
     EB[EventBus 事件] --> URP[UnifiedRegistryPlugin]
 
@@ -94,7 +99,7 @@ flowchart LR
 
     URP --> HS[HelpGenerator / ErrorHandler]
     HS -.-> EXEC
-```
+:::
 
 要点：
 - 事件由 `EventBus` 分发到 `UnifiedRegistryPlugin`，随后按“预处理 → 分词 → 解析 → 过滤 → 绑定 → 执行”的主链路推进。
@@ -105,7 +110,7 @@ flowchart LR
 
 ### 消息到执行的时序（Sequence）
 
-```mermaid
+:::mermaid
 sequenceDiagram
     participant User as 用户
     participant EventBus as EventBus
@@ -132,10 +137,10 @@ sequenceDiagram
     Plugin->>Exec: 调用目标命令函数
     Exec-->>Plugin: 执行结果
     Plugin-->>EventBus: 回复/后续操作
-```
+:::
 ### 命令注册结构（Class Diagram）
 
-```mermaid
+:::mermaid
 classDiagram
     class ModernRegistry {
       +register_command()
@@ -166,7 +171,7 @@ classDiagram
     CommandSpec --> ParameterSpec
     CommandSpec --> OptionSpec
     CommandSpec --> OptionGroupSpec
-```
+:::
 
 装饰器生态（示例）：
 - `@command_registry.command("name", description=...)`
@@ -177,7 +182,7 @@ classDiagram
 
 ### 过滤器系统结构（Class Diagram）
 
-```mermaid
+:::mermaid
 classDiagram
     class FilterRegistry {
       +register()
@@ -189,7 +194,7 @@ classDiagram
       +metadata
     }
     FilterRegistry o--> FilterEntry
-```
+:::
 
 典型过滤器：
 - 群聊限定、私聊限定、管理员权限、自定义复合过滤器等。
