--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/2. 快速开始.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/2. 快速开始.md
@@ -1,3 +1,8 @@
+---
+title:  快速开始
+createTime: 2025/09/28 10:43:51
+permalink: /guide/vb4nwaif/
+---
 # UnifiedRegistry 快速开始指南
 
 ## 🎯 5分钟上手 UnifiedRegistry
