--- a/docs/notes/guide/8. 高级教程/2. 测试/2. 快速开始.md
+++ b/docs/notes/guide/8. 高级教程/2. 测试/2. 快速开始.md
@@ -1,3 +1,8 @@
+---
+title:  快速开始
+createTime: 2025/09/28 10:43:51
+permalink: /guide/rapboelv/
+---
 # NcatBot 测试快速上手指南
 
 本指南将帮助您快速了解如何为 NcatBot 插件编写测试。
