--- a/docs/notes/guide/8. 高级教程/2. 测试/3. API 参考.md
+++ b/docs/notes/guide/8. 高级教程/2. 测试/3. API 参考.md
@@ -1,3 +1,8 @@
+---
+title:  API 参考
+createTime: 2025/09/28 10:43:51
+permalink: /guide/usfsv06o/
+---
 # NcatBot 测试框架 API 参考
 
 本文档提供 `ncatbot.utils.testing` 模块中所有测试相关类和方法的详细参考。
