--- a/docs/notes/guide/8. 高级教程/2. 测试/4. 函数式测试最佳实践.md
+++ b/docs/notes/guide/8. 高级教程/2. 测试/4. 函数式测试最佳实践.md
@@ -1,3 +1,8 @@
+---
+title:  函数式测试最佳实践
+createTime: 2025/09/28 10:43:51
+permalink: /guide/97fh7bjl/
+---
 # 简单函数式测试最佳实践
 
 本文档介绍如何使用简单的函数方式快速编写 NcatBot 插件测试，适合快速验证、调试和原型开发。
