--- a/docs/notes/guide/1. 开始/3. 开发指南.md
+++ b/docs/notes/guide/1. 开始/3. 开发指南.md
@@ -23,7 +23,7 @@ permalink: /guide/devguide/
 - 定时发送一些消息。
 - 你无法明白前台模式和后台模式的差异。
 
-[参考代码](./1.1%20Linux%20安装.md#执行代码)。
+[参考代码](./3.%20安装教程/2.%20Linux%20安装.md#执行代码)。
 
 ### 后台模式
 
@@ -38,157 +38,114 @@ permalink: /guide/devguide/
 适合场景：
 - QQ Bot 只是项目工作流的一个组件，程序的生命周期不应该由 NcatBot 管理。
 
-[参考代码](./1.5%20通用安装指南.md#Hello%20NcatBot)
-
-
-## 推荐阅读路线
-
-1. [插件最小示例](../2.%20基本开发/1.%20插件模式最小示例.md)。
----------------------------
-
-
-# 还没写好
-## 从实际项目快速了解
-
-- [主动发送消息](../8.%20实际项目参考/教程项目/主动发送消息.md)
-- [处理好友请求和加群请求](../8.%20实际项目参考/教程项目/处理好友请求和加群请求.md)
-- [发送包含图片、表情、文字、At、回复的复杂消息](../8.%20实际项目参考/教程项目/发送复杂消息.md)
-- [发送合并转发消息](../8.%20实际项目参考/教程项目/发送合并转发消息.md)
-- [上传和获取文件](../8.%20实际项目参考/教程项目/上传和获取文件.md)
-- [定时任务](../8.%20实际项目参考/教程项目/定时任务插件.md)
-
-## 学习路径
-
-- 阅读你操作系统的安装方式.
-- 阅读对应的最小示例.
-  - [插件模式最小示例](../2.%20基本开发/1.%20插件模式最小示例.md)
-  - [主动模式最小示例](../2.%20基本开发/1.%20主动模式最小示例.md)
-- 阅读[回调函数](../3.%20事件处理/1.%20回调函数.md)部分, 了解回调函数参数的数据格式.
-- 阅读[事件上报](../3.%20事件处理/2.%20事件上报.md), 了解能够监听和处理的事件类型.
-- 阅读[API 调用](../4.%20API%20参考/1.%20API%20调用.md), 了解如何调用 NcatBot 提供的 API.
-- 阅读[AI+NcatBot](../5.%20杂项/7.%20AI+NcatBot.md)，了解如何正确使用 AI 开发基于 NcatBot 的项目。
-- 阅读[开发技巧](../5.%20杂项/8.%20开发技巧.md)，提高你的开发效率。
-
-### 插件模式
-
-- [了解 NcatBot 插件](../6.%20开发%20NcatBot%20插件/1.%20了解%20NcatBot%20插件.md)
-- [插件的加载和卸载](../6.%20开发%20NcatBot%20插件/2.%20插件的加载和卸载.md)
-- [事件的发布和订阅](../6.%20开发%20NcatBot%20插件/3.%20插件的交互系统/3.1%20事件的发布和订阅.md)
-- [注册功能](../6.%20开发%20NcatBot%20插件/3.%20插件的交互系统/3.2%20注册功能.md)
-- [权限系统](../6.%20开发%20NcatBot%20插件/3.%20插件的交互系统/3.3%20权限系统.md)
-- [内置功能](../6.%20开发%20NcatBot%20插件/3.%20插件的交互系统/3.4%20内置功能.md)
-- [发布你的插件](../6.%20开发%20NcatBot%20插件/5.%20发布你的插件.md)
-
-### 主动模式
-
-- [主动模式开发](../2.%20基本开发/5.%20主动模式开发.md)
+[参考代码](./3.%20安装教程/1%20通用安装指南.md#hello-ncatbot)
 
 
 ## 文档导航
 
-### 1. 快速开始
+### 1. 开始
 
-[1. 快速开始](./1.%20快速开始.md): 了解如何快速上手 NcatBot.
-
-[1.1. Linux 安装](1.1%20Linux%20安装.md): Linux 安装 NcatBot.
-
-[1.2. Windows 安装](1.2%20Windows%20安装.md): Windows 安装 NcatBot.
-
-[1.3. MacOS 安装(暂不提供官方支持)](1.3%20MacOS%20安装.md): MacOS 安装 NcatBot.
-
-[1.4. Windows 一键安装](1.4%20Windows%20一键安装.md): Windows 下载 .exe 文件安装 NcatBot.
-
-[1.5 极简安装指南](1.5%20极简安装指南.md): 给熟练的同学快速上手 NcatBot.
-
-[2. 开发指南](./2.%20开发指南.md): 了解如何基于 NcatBot 开发 QQ 机器人.
-
-[3. 安装和使用插件](3.%20安装和使用插件.md): 基于 NcatBot 开发的 QQ 机器人通常以**插件**的形式发布, 了解如何安装和使用插件. 
+- [1. 认识 NcatBot](./1.%20认识%20NcatBot.md): 项目简介与社区信息。
+- [2. 快速开始](./2.%20快速开始.md): 最快 5 分钟跑通 NcatBot。
+- 安装教程：
+  - [通用安装指南](./3.%20安装教程/1%20通用安装指南.md)
+  - [Linux 安装](./3.%20安装教程/2.%20Linux%20安装.md)
+  - [Windows 安装](./3.%20安装教程/3.%20Windows%20安装.md)
+  - [MacOS 安装](./3.%20安装教程/4.%20MacOS%20安装.md)
+  - [Windows 一键安装](./3.%20安装教程/5.%20Windows%20一键安装.md)
+- [安装和使用插件](./4.%20安装和使用插件.md): 了解如何获取并启用社区插件。
 
 ### 2. 基本开发
 
-[1. 插件模式最小示例](../2.%20基本开发/1.%20插件模式最小示例.md): 插件模式最小示例和代码解析。
+- [1. 插件最小示例](../2.%20基本开发/1.%20插件最小示例.md)
+- [2. 前后台模式最小示例](../2.%20基本开发/2.%20前后台模式最小示例.md)
+- [3. NcatBot 生命周期](../2.%20基本开发/3.%20NcatBot%20生命周期.md)
+- [4. 配置项](../2.%20基本开发/4.%20配置项.md)
+- [5. 状态量](../2.%20基本开发/5.%20状态量.md)
 
-[2. 主动模式最小示例](../2.%20基本开发/2.%20主动模式最小示例.md): 主动模式最小示例和代码解析.
+### 3. 组件介绍
 
-[3. NcatBot 生命周期](../2.%20基本开发/1.%20NcatBot%20生命周期.md): 了解 NcatBot 的运行生命周期.
+- [1. 核心组件概览](../3.%20组件介绍/1.%20核心组件概览.md)
+- [2. BotClient](../3.%20组件介绍/2.%20BotClient.md)
+- [3. PluginLoader](../3.%20组件介绍/3.%20PluginLoader.md)
+- [4. EventBus](../3.%20组件介绍/4.%20EventBus.md)
+- [5. Adapter](../3.%20组件介绍/5.%20Adapter.md)
+- [6. BotAPI](../3.%20组件介绍/6.%20BotAPI.md)
 
-[4. 配置项](../2.%20基本开发/4.%20配置项.md): 介绍 NcatBot 的配置项, 了解可自定义的内容.
+### 4. 数据结构介绍
 
-[5. 主动模式开发](../2.%20基本开发/5.%20主动模式开发.md): 主动模式开发介绍。
+- [1. 核心数据结构概览](../4.%20数据结构介绍/1.%20核心数据结构概览.md)
+- [2. BaseEventData](../4.%20数据结构介绍/2.%20BaseEventData.md)
+- [3. MessageArray](../4.%20数据结构介绍/3.%20MessageArray.md)
+- [4. MessageSegment](../4.%20数据结构介绍/4.%20MessageSegment.md)
+- [5. ForwardConstructor](../4.%20数据结构介绍/5.%20ForwardConstructor.md)
 
-### 3. 事件处理
+### 5. API 参考
 
-[1. 回调函数](../3.%20事件处理/1.%20回调函数.md): 了解 NcatBot 如何处理事件, 了解 NcatBot 向回调函数传递的的事件参数.
+- [1. 概览](../5.%20API%20参考/1.%20概览.md)
+- [2. Message 有关 API](../5.%20API%20参考/2.%20Message%20有关%20API.md)
+- [3. Account 有关 API](../5.%20API%20参考/3.%20Account%20有关%20API.md)
+- [4. Group 有关 API](../5.%20API%20参考/4.%20Group%20有关%20API.md)
+- [5. private 有关 API](../5.%20API%20参考/5.%20private%20有关%20API.md)
+- [6. Support 有关 API](../5.%20API%20参考/6.%20Support%20有关%20API.md)
+- 实战手册：
+  - [常见场景](../5.%20API%20参考/7.%20实战手册/1.%20常见场景.md)
 
-[2. 事件上报](../3.%20事件处理/2.%20事件上报.md): 了解 NcatBot 可以监听哪些 QQ 事件. 以及如何获取这些事件的有关信息
+### 7. 插件系统
 
-[3. 消息解析](../3.%20事件处理/3.%20消息解析.md): 特别了解如何解析消息, 以及如何获取消息的详细信息.
+- [1. 介绍](../7.%20插件系统/1.%20介绍.md)
+- [2. 插件类的成员](../7.%20插件系统/2.%20插件类的成员.md)
+- 插件的交互系统：
+  - [3.1 事件的发布和订阅](../7.%20插件系统/3.%20插件的交互系统/3.1%20事件的发布和订阅.md)
+  - [3.2 功能和命令](../7.%20插件系统/3.%20插件的交互系统/3.2%20功能和命令.md)
+  - [3.3 权限系统](../7.%20插件系统/3.%20插件的交互系统/3.3%20权限系统.md)
+  - [3.4 系统命令](../7.%20插件系统/3.%20插件的交互系统/3.4%20系统命令.md)
+  - [3.5 内置插件的拓展功能](../7.%20插件系统/3.%20插件的交互系统/3.5%20内置插件的拓展功能.md)
+- 插件高级功能：
+  - [4.1 添加依赖](../7.%20插件系统/4.%20插件高级功能/4.1.%20添加依赖.md)
+  - [4.2 私有工作目录](../7.%20插件系统/4.%20插件高级功能/4.2%20私有工作目录.md)
+  - [4.3 定时任务](../7.%20插件系统/4.%20插件高级功能/4.3%20定时任务.md)
+  - [4.4 插件配置项](../7.%20插件系统/4.%20插件高级功能/4.4%20插件配置项.md)
+- [5. 发布你的插件](../7.%20插件系统/5.%20发布你的插件.md)
 
-### 4. API 参考
+### 8. 高级教程
 
-[1. API 调用](../4.%20API%20参考/1.%20API%20调用.md): 了解 NcatBot 的 API 调用方式.
+- 统一命令注册器：
+  - [概览](../8.%20高级教程/1.%20统一命令注册器/1.%20概览.md)
+  - [快速开始](../8.%20高级教程/1.%20统一命令注册器/2.%20快速开始.md)
+  - [命令系统](../8.%20高级教程/1.%20统一命令注册器/3.%20命令系统.md)
+  - [参数解析](../8.%20高级教程/1.%20统一命令注册器/4.%20参数解析.md)
+  - [过滤器系统](../8.%20高级教程/1.%20统一命令注册器/5.%20过滤器系统.md)
+  - [测试指南](../8.%20高级教程/1.%20统一命令注册器/6.%20测试指南.md)
+  - [实战案例](../8.%20高级教程/1.%20统一命令注册器/7.%20实战案例.md)
+  - [最佳实践](../8.%20高级教程/1.%20统一命令注册器/8.%20最佳实践.md)
+  - [FAQ](../8.%20高级教程/1.%20统一命令注册器/9.%20FAQ.md)
+- 测试：
+  - [概览](../8.%20高级教程/2.%20测试/1.%20概览.md)
+  - [快速开始](../8.%20高级教程/2.%20测试/2.%20快速开始.md)
+  - [API 参考](../8.%20高级教程/2.%20测试/3.%20API%20参考.md)
+  - [函数式测试最佳实践](../8.%20高级教程/2.%20测试/4.%20函数式测试最佳实践.md)
+  - [集成测试最佳实践](../8.%20高级教程/2.%20测试/5.%20集成测试最佳实践.md)
+- 其他：
+  - [远端模式](../8.%20高级教程/3.%20其他/1.%20远端模式.md)
+  - [日志](../8.%20高级教程/3.%20其他/2.%20日志.md)
+  - [CLI](../8.%20高级教程/3.%20其他/3.%20CLI.md)
+  - [AI+NcatBot](../8.%20高级教程/3.%20其他/4.%20AI+NcatBot.md)
+  - [开发技巧](../8.%20高级教程/3.%20其他/5.%20开发技巧.md)
+- [最佳实践](../8.%20高级教程/4.%20最佳实践.md)
 
-[2. 主要 API 说明](../4.%20API%20参考/2.%20主要%20API%20及其使用.md): 了解如何使用 NcatBot 的主要 API, 例如如何发送消息和文件等. 
+### 9. 实际项目参考
 
-[3. 其它 API 说明](../4.%20API%20参考/3.%20其它%20API%20及其使用.md): 了解如何使用 NcatBot 的其它 API, 例如如何获取群成员信息, 通过加群申请等.
+- 教程项目：
+  - [发送复杂消息](../9.%20实际项目参考/教程项目/1.%20发送复杂消息.md)
+  - [发送合并转发消息](../9.%20实际项目参考/教程项目/2.%20发送合并转发消息.md)
+  - [上传和获取文件](../9.%20实际项目参考/教程项目/3.%20上传和获取文件.md)
+  - [处理好友请求和加群请求](../9.%20实际项目参考/教程项目/4.%20处理好友请求和加群请求.md)
+- [1. 简单 BotClient 项目](../9.%20实际项目参考/1.%20简单%20BotClient%20项目.md)
 
-### 5. 杂项
+### 10. 常见问题
 
-[1. 认识 NcatBot](../5.%20杂项/1.%20认识%20NcatBot.md): 了解 NcatBot 社区和历史.
-
-[2. 使用远端 napcat 接口](../5.%20杂项/2.%20使用远端%20napcat%20接口.md): NcatBot 如何使用位于另外一台计算机上的 NapCat 接口.
-
-[3. 日志](../5.%20杂项/3.%20日志.md): NcatBot 的日志系统主要用于调试, 如果遇到问题需要求助, 请附上日志文件.
-
-[4. 轻松上云](../5.%20杂项/4.%20轻松上云.md): NcatBot 与 IDC 服务商有合作, 利用合作服务商的云服务, 可以**轻松且经济**地部署 NcatBot 上云.
-
-[5. CLI](../5.%20杂项/5.%20CLI.md): NcatBot-CLI 用于管理 NcatBot 的插件, 了解如何使用 NcatBot-CLI 以便于开发 NcatBot 插件.
-
-[6. 术语表](../5.%20杂项/6.%20术语表.md): 了解 NcatBot 的术语.
-
-[7. AI+NcatBot](../5.%20杂项/7.%20AI+NcatBot.md): 如何使用 AI 高效开发 NcatBot。
-
-### 6. 开发 NcatBot 插件
-
-[1. 了解 NcatBot 插件](../6.%20开发%20NcatBot%20插件/1.%20了解%20NcatBot%20插件.md): 对 NcatBot 插件的基本了解.
-
-[2. 插件的加载和卸载](../6.%20开发%20NcatBot%20插件/2.%20插件的加载和卸载.md): 插件的生命周期始于加载, 终于卸载, 了解 NcatBot 插件的加载卸载过程.
-
-**3. 插件的交互系统**: 
-  - [事件的发布和订阅](../6.%20开发%20NcatBot%20插件/3.%20插件的交互系统/3.1%20事件的发布和订阅.md): 插件可以监听**广义事件**, 即 **QQ 事件**和**插件事件**. 插件也可以发布自定义事件. 了解事件如何被发布、订阅和处理.
-  - [注册功能](../6.%20开发%20NcatBot%20插件/3.%20插件的交互系统/3.2%20注册功能.md): 插件能够注册自定义功能, 功能是对**事件及其处理**的上层抽象, 通过功能可以更高效的设计 QQ Bot.
-  - [权限系统](../6.%20开发%20NcatBot%20插件/3.%20插件的交互系统/3.3%20权限系统.md): 权限系统用于决定**每个特定功能**能被哪些用户和群聊使用, 让你的插件更加安全.
-  - [内置功能](../6.%20开发%20NcatBot%20插件/3.%20插件的交互系统/3.4%20内置功能.md): NcatBot 内置了多个功能以方便插件开发, 了解如何使用这些功能.
-  
-**4. 插件高级功能**:
-  - [内置可持久化数据](../6.%20开发%20NcatBot%20插件/4.%20插件高级功能/4.1.%20内置可持久化数据.md): NcatBot 插件系统可以持久化数据, 使用内置可持久化数据可以方便的长期保存 Bot 运行时数据.
-  - [依赖其它插件](../6.%20开发%20NcatBot%20插件/4.%20插件高级功能/4.2.%20依赖其它插件.md): 插件可以依赖其它插件, 以便构建更加强大的插件.
-  - [依赖第三方 Python 库](../6.%20开发%20NcatBot%20插件/4.%20插件高级功能/4.3.%20依赖第三方%20Python%20库.md): 插件可以依赖第三方 Python 库, 以便使用第三方库提供的功能.
-  - [私有工作目录](../6.%20开发%20NcatBot%20插件/4.%20插件高级功能/4.4%20私有工作目录.md): NcatBot **禁止**插件进行 `os.chdir` 切换目录操作, 使用私有工作目录上下文可以方便的进行文件和路径操作.
-  - [定时任务](../6.%20开发%20NcatBot%20插件/4.%20插件高级功能/4.3%20定时任务.md): NcatBot 插件可以注册定时任务, 让你的 Bot 提醒你上早八吧.
-
-[5. 发布你的插件](../6.%20开发%20NcatBot%20插件/5.%20发布你的插件.md): NcatBot 提供插件的快速分发和快速部署方案, 了解如何发布你的插件以便用户能够便捷使用.
-[6. 个人插件](../6.%20开发%20NcatBot%20插件/6.%20个人插件.md): 在确保只有个人使用需求时，可以忽略一些插件模式的限制。
-
-### 7. 常见问题
-
-[1. 安装时常见问题](../7.%20常见问题/1.%20安装时常见问题.md): **安装或者首次运行** NcatBot 时能够遇到的常见问题.
-
-[2. 运行时常见问题](../7.%20常见问题/2.%20运行时常见问题.md): (非首次)运行时可能遇到的问题.
-
-[3. 开发时常见问题](../7.%20常见问题/3.%20开发时常见问题.md): 进行开发或者功能测试时可能遇到的文件.
-
-### 8. 实际项目参考
-
-**综合教程项目**:
-  - [主动发送消息](../8.%20实际项目参考/教程项目/)
-  - [处理好友请求和加群请求](../8.%20实际项目参考/教程项目/)
-  - [发送包含图片、表情、文字、At、回复的复杂消息](../8.%20实际项目参考/教程项目/)
-  - [发送合并转发消息](../8.%20实际项目参考/教程项目/)
-  - [上传和获取文件](../8.%20实际项目参考/教程项目/)
-  - [定时任务](../8.%20实际项目参考/教程项目/)
-
-[1. 简单 BotClient 项目](../8.%20实际项目参考/1.%20简单%20BotClient%20项目.md): BotClient 项目的示例.
-
-[2. LLM_API 插件项目](../8.%20实际项目参考/2.%20LLM_API%20插件项目.md): 插件项目示例————LLM_API.
+- [1. 安装时常见问题](../10.%20常见问题/1.%20安装时常见问题.md)
+- [2. 运行时常见问题](../10.%20常见问题/2.%20运行时常见问题.md)
+- [3. 开发时常见问题](../10.%20常见问题/3.%20开发时常见问题.md)
 
