--- a/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.2 功能和命令.md
+++ b/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.2 功能和命令.md
@@ -44,7 +44,7 @@ def register_admin_func(...)
 
 注册一个用户功能, 如果能满足触发条件则触发该功能.
 
-- `name`: 功能名称, 用于建立权限结构, 该功能的[权限路径]()为 `<plugin_name>.<name>`.
+- `name`: 功能名称, 用于建立权限结构, 该功能的[权限路径](3.3%20权限系统.md)为 `<plugin_name>.<name>`.
 功能.
 - `handler`: 功能处理函数, 接受一个 `BaseMessageEvent` 类型的参数, .
 - `filter`: 自定义过滤函数, 接受一个 `NcatBotEvent` 类型的参数, 返回布尔值表示是否触发功能. 如果为 `None` 则不进行过滤.
