--- a/docs/notes/guide/8. 高级教程/2. 测试/5. 集成测试最佳实践.md
+++ b/docs/notes/guide/8. 高级教程/2. 测试/5. 集成测试最佳实践.md
@@ -1,3 +1,8 @@
+---
+title:  集成测试最佳实践
+createTime: 2025/09/28 10:43:51
+permalink: /guide/z6o1h7ds/
+---
 # 标准化测试最佳实践 - 使用 unittest 框架
 
 本文档介绍如何使用 Python 标准库 `unittest` 框架编写规范的 NcatBot 插件测试。
