--- a/docs/notes/guide/2. 基本开发/3. NcatBot 生命周期.md
+++ b/docs/notes/guide/2. 基本开发/3. NcatBot 生命周期.md
@@ -35,7 +35,7 @@ permalink: /guide/lifespan/
 
 ## Mermaid 流程图
 
-:::mermaid
+```mermaid
 sequenceDiagram
     participant U as User Code
     participant B as BotClient
@@ -75,7 +75,7 @@ sequenceDiagram
             Note right of U: 用户代码可以立即<br/>执行后续逻辑，<br/>无需等待事件
         end
     end
-:::
+```
 
 ## 1. 初始化
 
