--- a/docs/notes/guide/3. 组件介绍/2. BotClient.md
+++ b/docs/notes/guide/3. 组件介绍/2. BotClient.md
@@ -9,7 +9,7 @@ permalink: /guide/botclient/
 ## BotClient：事件回调注册与运行方式
 
 
-BotClient 是 NcatBot 的对外门面，负责：
+BotClient 是 NcatBot 的对外门面，==一个进程只允许出现一个 BotClient 实例==，负责：
 - 持有 Adapter 与 BotAPI，并把 Adapter 的底层能力包装成易用的 API（`self.api = BotAPI(self.adapter.send)`）。
 - 为「官方事件」建立回调分发组，并提供两种注册方式（函数式与装饰器）。
 - 自动把官方事件转发到插件系统的 EventBus，让插件按需订阅处理。
