--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/1. 概览.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/1. 概览.md
@@ -71,7 +71,7 @@ class MyPlugin(NcatBotPlugin):
 
 ### 高层组件关系（Component）
 
-:::mermaid
+```mermaid
 flowchart LR
     EB[EventBus 事件] --> URP[UnifiedRegistryPlugin]
 
@@ -99,7 +99,7 @@ flowchart LR
 
     URP --> HS[HelpGenerator / ErrorHandler]
     HS -.-> EXEC
-:::
+```
 
 要点：
 - 事件由 `EventBus` 分发到 `UnifiedRegistryPlugin`，随后按“预处理 → 分词 → 解析 → 过滤 → 绑定 → 执行”的主链路推进。
@@ -110,7 +110,7 @@ flowchart LR
 
 ### 消息到执行的时序（Sequence）
 
-:::mermaid
+```mermaid
 sequenceDiagram
     participant User as 用户
     participant EventBus as EventBus
@@ -137,10 +137,10 @@ sequenceDiagram
     Plugin->>Exec: 调用目标命令函数
     Exec-->>Plugin: 执行结果
     Plugin-->>EventBus: 回复/后续操作
-:::
+```
 ### 命令注册结构（Class Diagram）
 
-:::mermaid
+```mermaid
 classDiagram
     class ModernRegistry {
       +register_command()
@@ -171,7 +171,7 @@ classDiagram
     CommandSpec --> ParameterSpec
     CommandSpec --> OptionSpec
     CommandSpec --> OptionGroupSpec
-:::
+```
 
 装饰器生态（示例）：
 - `@command_registry.command("name", description=...)`
@@ -182,7 +182,7 @@ classDiagram
 
 ### 过滤器系统结构（Class Diagram）
 
-:::mermaid
+```mermaid
 classDiagram
     class FilterRegistry {
       +register()
@@ -194,7 +194,7 @@ classDiagram
       +metadata
     }
     FilterRegistry o--> FilterEntry
-:::
+```
 
 典型过滤器：
 - 群聊限定、私聊限定、管理员权限、自定义复合过滤器等。
@@ -202,18 +202,18 @@ classDiagram
 ## 📚 文档导航
 
 ### 🎯 快速入门
-- **[快速开始指南](./UnifiedRegistry-快速开始.md)** - 5分钟上手教程
+- **[快速开始指南](2.%20快速开始.md)** - 5分钟上手教程
 
 ### 📖 功能指南
-- **[过滤器系统](./UnifiedRegistry-过滤器系统.md)** - 权限控制和消息过滤
-- **[命令注册系统](./UnifiedRegistry-命令系统.md)** - 命令注册和管理
-- **[参数解析指南](./UnifiedRegistry-参数解析.md)** - 现代化参数处理
+- **[过滤器系统](./5.%20过滤器系统.md)** - 权限控制和消息过滤
+- **[命令注册系统](3.%20命令系统.md)** - 命令注册和管理
+- **[参数解析指南](4.%20参数解析.md)** - 现代化参数处理
 
 ### 💡 进阶内容
-- **[最佳实践](./UnifiedRegistry-最佳实践.md)** - 专业开发指导
-- **[实战案例](./UnifiedRegistry-实战案例.md)** - 真实应用场景
-- **[测试指南](./UnifiedRegistry-测试指南.md)** - 插件测试方法
-- **[常见问题](./UnifiedRegistry-FAQ.md)** - 问题解决手册
+- **[最佳实践](8.%20最佳实践.md)** - 专业开发指导
+- **[实战案例](7.%20实战案例.md)** - 真实应用场景
+- **[测试指南](6.%20测试指南.md)** - 插件测试方法
+- **[常见问题](9.%20FAQ.md)** - 问题解决手册
 
 ## 🎯 适用场景
 
@@ -226,7 +226,7 @@ classDiagram
 
 ## 🚦 开始使用
 
-1. **阅读**: [快速开始指南](./UnifiedRegistry-快速开始.md)
+1. **阅读**: [快速开始指南](2.%20快速开始.md)
 2. **学习**: 选择相应的功能指南深入了解
 3. **实践**: 参考实战案例开发自己的插件
 4. **测试**: 使用测试指南确保插件质量
