--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/3. 命令系统.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/3. 命令系统.md
@@ -533,9 +533,9 @@ class MyPlugin(NcatBotPlugin):
 
 现在您已经掌握了命令系统的使用！接下来可以：
 
-1. **学习参数解析**: 查看 [参数解析指南](./UnifiedRegistry-参数解析.md) 了解更多高级语法
-2. **查看实际应用**: 参考 [实战案例](./UnifiedRegistry-实战案例.md) 学习实用技巧
-3. **掌握最佳实践**: 阅读 [最佳实践](./UnifiedRegistry-最佳实践.md) 提升代码质量
+1. **学习参数解析**: 查看 [参数解析指南](./4.%20参数解析.md) 了解更多高级语法
+2. **查看实际应用**: 参考 [实战案例](./7.%20实战案例.md) 学习实用技巧
+3. **掌握最佳实践**: 阅读 [最佳实践](./8.%20最佳实践.md) 提升代码质量
 
 ---
 
