--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/4. 参数解析.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/4. 参数解析.md
@@ -406,9 +406,9 @@ class MyPlugin(NcatBotPlugin):
 
 掌握参数解析系统后，您可以：
 
-1. **应用实践**: 查看 [实战案例](./UnifiedRegistry-实战案例.md) 学习复杂应用
-2. **提升质量**: 阅读 [最佳实践](./UnifiedRegistry-最佳实践.md) 优化代码
-3. **测试验证**: 参考 [测试指南](./UnifiedRegistry-测试指南.md) 确保功能正确
+1. **应用实践**: 查看 [实战案例](./7.%20实战案例.md) 学习复杂应用
+2. **提升质量**: 阅读 [最佳实践](./8.%20最佳实践.md) 优化代码
+3. **测试验证**: 参考 [测试指南](./6.%20测试指南.md) 确保功能正确
 
 ---
 
