--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/5. 过滤器系统.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/5. 过滤器系统.md
@@ -168,7 +168,12 @@ class MyPlugin(NcatBotPlugin):
 
 ### 1. 使用 CustomFilter
 
-自定义过滤器时，过滤器函数**只接受一个 `BaseMessageEvent` 对象作为参数**。返回 `bool` 类型，表示是否通过过滤器。
+自定义过滤器时，过滤器函数**只接受一个 `BaseMessageEvent` 基类型对象作为参数**。返回 `bool` 类型，表示是否通过过滤器。
+
+实际类型可以是 `GroupMessageEvent`、`PrivateMessageEvent`。
+
+查看[有关数据结构](../../4.%20数据结构介绍/2.%20BaseEventData.md#BaseMessageEvent（消息事件基类）)了解更多。
+
 
 ```python
 from ncatbot.plugin_system.builtin_plugin.unified_registry.filter_system import CustomFilter
@@ -299,9 +304,9 @@ class MyPlugin(NcatBotPlugin):
 
 掌握过滤器系统后，您可以：
 
-1. **学习命令系统**: 查看 [命令注册系统指南](./UnifiedRegistry-命令系统.md)
-2. **了解参数处理**: 阅读 [参数解析指南](./UnifiedRegistry-参数解析.md)
-3. **查看实际应用**: 参考 [实战案例](./UnifiedRegistry-实战案例.md)
+1. **学习命令系统**: 查看 [命令注册系统指南](3.%20命令系统.md)
+2. **了解参数处理**: 阅读 [参数解析指南](4.%20参数解析.md)
+3. **查看实际应用**: 参考 [实战案例](7.%20实战案例.md)
 
 ---
 
