--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/6. 测试指南.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/6. 测试指南.md
@@ -403,5 +403,5 @@ async def debug_test():
 ---
 
 **🎯 下一步**: 
-- 查看 [实战案例](./UnifiedRegistry-实战案例.md) 了解复杂场景
-- 参考 [最佳实践](./UnifiedRegistry-最佳实践.md) 提升代码质量
+- 查看 [实战案例](./7.%20实战案例.md) 了解复杂场景
+- 参考 [最佳实践](./8.%20最佳实践.md) 提升代码质量
