--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/7. 实战案例.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/7. 实战案例.md
@@ -323,9 +323,9 @@ class WebAPIPlugin(NcatBotPlugin):
 
 现在您已经看到了 UnifiedRegistry 的实际应用！接下来可以：
 
-1. **学习测试**: 查看 [测试指南](./UnifiedRegistry-测试指南.md) 确保代码质量
-2. **解决问题**: 参考 [常见问题](./UnifiedRegistry-FAQ.md) 处理开发疑问
-3. **改进代码**: 回顾 [最佳实践](./UnifiedRegistry-最佳实践.md) 优化实现
+1. **学习测试**: 查看 [测试指南](./6.%20测试指南.md) 确保代码质量
+2. **解决问题**: 参考 [常见问题](./9.%20FAQ.md) 处理开发疑问
+3. **改进代码**: 回顾 [最佳实践](./8.%20最佳实践.md) 优化实现
 
 ---
 
