--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/8. 最佳实践.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/8. 最佳实践.md
@@ -280,9 +280,9 @@ class ConsistentNamingExample(NcatBotPlugin):
 
 掌握最佳实践后，您可以：
 
-1. **查看实例**: 阅读 [实战案例](./UnifiedRegistry-实战案例.md) 看到这些实践的应用
-2. **测试代码**: 参考 [测试指南](./UnifiedRegistry-测试指南.md) 确保代码质量
-3. **解决问题**: 查看 [常见问题](./UnifiedRegistry-FAQ.md) 处理开发中的疑问
+1. **查看实例**: 阅读 [实战案例](./7.%20实战案例.md) 看到这些实践的应用
+2. **测试代码**: 参考 [测试指南](./6.%20测试指南.md) 确保代码质量
+3. **解决问题**: 查看 [常见问题](./9.%20FAQ.md) 处理开发中的疑问
 
 ---
 
