--- a/docs/notes/guide/8. 高级教程/2. 测试/1. 概览.md
+++ b/docs/notes/guide/8. 高级教程/2. 测试/1. 概览.md
@@ -342,6 +342,6 @@ for event_type, event_data in client.event_history:
 
 ## 下一步
 
-- 查看[标准化测试最佳实践](./best-practice-unittest.md)了解如何使用 unittest 框架
-- 查看[简单函数式测试最佳实践](./best-practice-simple.md)了解快速测试方法
-- 查看[API 参考文档](./api-reference.md)了解所有可用的测试 API
+- 查看[标准化测试最佳实践](./5.%20集成测试最佳实践.md)了解如何使用 unittest 框架
+- 查看[简单函数式测试最佳实践](./4.%20函数式测试最佳实践.md)了解快速测试方法
+- 查看[API 参考文档](./3.%20API%20参考.md)了解所有可用的测试 API
