--- a/docs/notes/guide/8. 高级教程/2. 测试/2. 快速开始.md
+++ b/docs/notes/guide/8. 高级教程/2. 测试/2. 快速开始.md
@@ -130,7 +130,7 @@ if __name__ == "__main__":
 
 ## 测试文档目录
 
-- [完整测试指南](./guide.md) - 详细了解测试框架的所有功能
-- [标准化测试最佳实践](./best-practice-unittest.md) - 使用 unittest 框架的规范测试
-- [简单函数式测试最佳实践](./best-practice-simple.md) - 快速编写测试函数
-- [API 参考文档](./api-reference.md) - 所有测试相关 API 的详细说明
+- [完整测试指南](./1.%20概览.md) - 详细了解测试框架的所有功能
+- [标准化测试最佳实践](./5.%20集成测试最佳实践.md) - 使用 unittest 框架的规范测试
+- [简单函数式测试最佳实践](./4.%20函数式测试最佳实践.md) - 快速编写测试函数
+- [API 参考文档](./3.%20API%20参考.md) - 所有测试相关 API 的详细说明
