--- a/docs/notes/guide/8. 高级教程/2. 测试/4. 函数式测试最佳实践.md
+++ b/docs/notes/guide/8. 高级教程/2. 测试/4. 函数式测试最佳实践.md
@@ -453,5 +453,5 @@ async def debug_test():
 
 ## 下一步
 
-- 查看[标准化测试最佳实践](./best-practice-unittest.md)了解更规范的测试方法
-- 查看[API 参考文档](./api-reference.md)了解所有可用的测试 API
+- 查看[标准化测试最佳实践](./5.%20集成测试最佳实践.md)了解更规范的测试方法
+- 查看[API 参考文档](./3.%20API%20参考.md)了解所有可用的测试 API
