--- a/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
+++ b/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
@@ -18,17 +18,25 @@ NcatBot 将 OneBot/NapCat 的原始事件（称为官方事件）结构封装为
 
 ## 事件类继承关系
 
-:::mermaid
+```mermaid
 classDiagram
-	BaseEventData <|-- MessageEventData
-	MessageEventData <|-- BaseMessageEvent
-	BaseMessageEvent <|-- GroupMessageEvent
-	BaseMessageEvent <|-- PrivateMessageEvent
-	BaseEventData <|-- NoticeEvent
-	BaseEventData <|-- RequestEvent
-	BaseEventData <|-- MetaEvent
-	BaseMessageEvent <|-- AnonymousMessage
-:::
+    BaseEventData <|-- MessageEventData
+
+    MessageEventData <|-- BaseMessageEvent
+    
+    BaseMessageEvent <|-- GroupMessageEvent
+    
+    BaseMessageEvent <|-- PrivateMessageEvent
+    
+    BaseEventData <|-- NoticeEvent
+    
+    BaseEventData <|-- RequestEvent
+    
+    BaseEventData <|-- MetaEvent
+    
+    BaseMessageEvent <|-- AnonymousMessage
+
+```
 
 ## BaseEventData（基础事件）
 
