--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/2. 快速开始.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/2. 快速开始.md
@@ -268,10 +268,10 @@ class MyPlugin(NcatBotPlugin):
 
 现在您已经掌握了 UnifiedRegistry 的基础用法！接下来可以：
 
-1. **深入学习**: 阅读 [过滤器系统指南](./UnifiedRegistry-过滤器系统.md) 了解更多权限控制
-2. **探索功能**: 查看 [命令注册系统](./UnifiedRegistry-命令系统.md) 学习高级命令功能
-3. **参数解析**: 学习 [参数解析指南](./UnifiedRegistry-参数解析.md) 掌握复杂参数处理
-4. **实战练习**: 参考 [实战案例](./UnifiedRegistry-实战案例.md) 开发实用插件
+1. **深入学习**: 阅读 [过滤器系统指南](./5.%20过滤器系统.md) 了解更多权限控制
+2. **探索功能**: 查看 [命令注册系统](./3.%20命令系统.md) 学习高级命令功能
+3. **参数解析**: 学习 [参数解析指南](./4.%20参数解析.md) 掌握复杂参数处理
+4. **实战练习**: 参考 [实战案例](./7.%20实战案例.md) 开发实用插件
 
 ## ⚠️ 常见注意事项
 
