--- a/docs/notes/guide/8. 高级教程/2. 测试/5. 集成测试最佳实践.md
+++ b/docs/notes/guide/8. 高级教程/2. 测试/5. 集成测试最佳实践.md
@@ -304,5 +304,5 @@ class TestMyPlugin(NcatBotTestCase):
 
 ## 下一步
 
-- 查看[简单函数式测试最佳实践](./best-practice-simple.md)了解更灵活的测试方法
-- 查看[API 参考文档](./api-reference.md)了解所有测试相关的 API
+- 查看[简单函数式测试最佳实践](./4.%20函数式测试最佳实践.md)了解更灵活的测试方法
+- 查看[API 参考文档](./3.%20API%20参考.md)了解所有测试相关的 API
