API 导航、删除 Windows 一键安装方式

--- a/docs/notes/guide/5. API 参考/2. Message 有关 API.md
+++ b/docs/notes/guide/5. API 参考/2. Message 有关 API.md
@@ -1,7 +1,7 @@
 ---
 title: Message API
 createTime: 2025/09/26 17:22:00
-permalink: /api/botapi/message/
+permalink: /guide/apimessage/
 ---
 
 ## 概览
