--- a/docs/notes/guide/5. API 参考/3. Account 有关 API.md
+++ b/docs/notes/guide/5. API 参考/3. Account 有关 API.md
@@ -1,7 +1,7 @@
 ---
 title: Account API
 createTime: 2025/09/26 17:25:00
-permalink: /api/botapi/account/
+permalink: /guide/apiaccount/
 ---
 
 ## 概览
