--- a/docs/notes/guide/5. API 参考/5. private 有关 API.md
+++ b/docs/notes/guide/5. API 参考/5. private 有关 API.md
@@ -1,7 +1,7 @@
 ---
 title: Private API
 createTime: 2025/09/26 17:24:00
-permalink: /api/botapi/private/
+permalink: /guide/apiprivate/
 ---
 
 ## 概览
