--- a/docs/notes/guide/5. API 参考/6. Support 有关 API.md
+++ b/docs/notes/guide/5. API 参考/6. Support 有关 API.md
@@ -1,7 +1,7 @@
 ---
 title: Support API
 createTime: 2025/09/26 17:26:00
-permalink: /api/botapi/support/
+permalink: /guide/apisupport/
 ---
 
 ## 概览
