--- a/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
+++ b/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
@@ -1,5 +1,5 @@
 ---
-title: 事件类型（Message/Notice/Request）
+title: 官方事件对象 BaseEventData
 createTime: 2025/09/26 17:00:00
 permalink: /guide/events/
 ---
@@ -21,21 +21,13 @@ NcatBot 将 OneBot/NapCat 的原始事件（称为官方事件）结构封装为
 ```mermaid
 classDiagram
     BaseEventData <|-- MessageEventData
-
     MessageEventData <|-- BaseMessageEvent
-    
     BaseMessageEvent <|-- GroupMessageEvent
-    
     BaseMessageEvent <|-- PrivateMessageEvent
-    
     BaseEventData <|-- NoticeEvent
-    
     BaseEventData <|-- RequestEvent
-    
     BaseEventData <|-- MetaEvent
-    
     BaseMessageEvent <|-- AnonymousMessage
-
 ```
 
 ## BaseEventData（基础事件）
