--- a/docs/notes/guide/1. 开始/3. 安装教程/1 通用安装指南.md
+++ b/docs/notes/guide/1. 开始/3. 安装教程/1 通用安装指南.md
@@ -14,7 +14,7 @@ permalink: /guide/minimali/
 
 ## 环境检查
 
-- Python：版本 >= 3.12 （后续补丁会支持低版本）
+- Python：版本 >= 3.8
 - 操作系统：
   - Win10、Win11
     - 更新电脑 QQ 到最新版本
