--- a/docs/notes/guide/10. 常见问题/2. 运行时常见问题.md
+++ b/docs/notes/guide/10. 常见问题/2. 运行时常见问题.md
@@ -9,3 +9,11 @@ permalink: /guide/8v15vh4m/
 无视它，如果被踢下线，重新登录即可。
 
 要求安全验证时，按照它的要求做。
+
+### 群聊消息无法接收，私聊信息仅接收notice
+
+在其他配置正常时出现此问题，大概是系统时间的原因。
+
+对系统时间进行同步即可解决问题。
+
+
